Blackpurl/src/objects/Payroll_Time__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Formatted_Total_Time__c</fullName>
        <formula>IF(
	NOT(ISNULL(End_Date__c)),
	IF(
		FLOOR((End_Date__c - Start_Date__c) * 24) &lt; 10,
		&quot;0&quot; &amp; TEXT(FLOOR((End_Date__c - Start_Date__c) * 24)),
		TEXT(FLOOR((End_Date__c - Start_Date__c) * 24))
	),
	IF(
		FLOOR((now() - Start_Date__c) * 24) &lt; 10,
		&quot;0&quot; &amp; TEXT(FLOOR((now() - Start_Date__c) * 24)),
		TEXT(FLOOR((now() - Start_Date__c) * 24))
	)
) 
&amp; &quot;h&quot; &amp;
IF(
	NOT(ISNULL(End_Date__c)),
	IF(
		MOD(((End_Date__c - Start_Date__c) * 24 * 60), 60) &lt; 10,
		&quot;0&quot; &amp; TEXT(FLOOR(MOD(((End_Date__c - Start_Date__c) * 24 * 60), 60))),
		TEXT(FLOOR(MOD(((End_Date__c - Start_Date__c) * 24 * 60), 60)))
	),
	IF(
		MOD(((now() - Start_Date__c) * 24 * 60), 60) &lt; 10,
		&quot;0&quot; &amp; TEXT(FLOOR(MOD(((now() - Start_Date__c) * 24 * 60), 60))),
		TEXT(FLOOR(MOD(((now() - Start_Date__c) * 24 * 60), 60)))
	)
)
&amp; &quot;min&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Total Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Time__c</fullName>
        <formula>IF( 
(VALUE(TEXT(HOUR (TIMEVALUE(Start_Date__c)))) + (VALUE(TEXT(MINUTE(TIMEVALUE(Start_Date__c)))) / 60) + $User.Timezone_Offset__c) &gt;= 24, 
(VALUE(TEXT(HOUR (TIMEVALUE(Start_Date__c)))) + (VALUE(TEXT(MINUTE(TIMEVALUE(Start_Date__c)))) / 60) + $User.Timezone_Offset__c) - 24, 
(VALUE(TEXT(HOUR (TIMEVALUE(Start_Date__c)))) + (VALUE(TEXT(MINUTE(TIMEVALUE(Start_Date__c)))) / 60) + $User.Timezone_Offset__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Clocked_On__c</fullName>
        <formula>AND(
	NOT(ISNULL(Start_Date__c)),  
	ISNULL(End_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Clocked On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Date__c</fullName>
        <formula>DATEVALUE( Start_Date__c + (($User.Timezone_Offset__c)/24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Payroll Times</relationshipLabel>
        <relationshipName>Payroll_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>IF( 
		NOT(ISNULL(End_Date__c)), 
		(End_Date__c - Start_Date__c),
		(now() - Start_Date__c)
)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payroll Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Payroll Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>